fix the overlapping of the footer on mobile devices

--- a/style.css
+++ b/style.css
@@ -166,6 +166,9 @@ body{
         grid-row:3 ;
         border-radius:0 0 10px 10px ;
     }
+    .attribution {
+        left:0;
+    }
 }
 
 @media screen and (max-width:420px) {
